# mockall

./: .env  Cargo.toml  Dockerfile  README.md  dockerDeploy.sh
migrations/: 20241102184144_init.sql
src/: auto.rs  main.rs  manual.rs  models.rs
