[package]
name = "mockall"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
dotenv = "0.15.0"
fake = { version = "3.0.0", features=['derive']}
mockall = "0.13.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls", "chrono"]}
tokio = { version = "1.41.0", features = ["full"] }